# PnPTrainer

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindFreeTypeGL.cmake  FindRapidJSON.cmake  FindSOIL2.cmake
shaders/match/: billboard-vert.glsl
shaders/match/captions/: fragment.glsl  vertex.glsl
shaders/match/cloud/: fragment.glsl  vertex.glsl
shaders/match/image/: fragment.glsl  vertex.glsl
shaders/pointcloud/: clock.ply
shaders/pointcloud/axes/: fragment.glsl  vertex.glsl
shaders/pointcloud/cloud/: fragment.glsl  vertex.glsl
src/: Axes.hh  CVQtScrollableImage.cc  CVQtScrollableImage.h  ImageWindow.cc  ImageWindow.hh  MatchIO.cc  MatchIO.h  MatchWin.cc  MatchWin.h  OGLFiberWin.cc  OGLFiberWin.hh  OGLUtils.cc  OGLUtils.h  OpenGLText.cc  OpenGLText.h  PointCloudWin.cc  PointCloudWin.h  SourceLocation.hh  SpinLock.h  Status.cc  Status.h  flags.h  glwindow.ui  imagewindow.ui  json.cc  json.h  main.cc  main.hh  types.h  util.cc  util.h
